# foss.in

twitterdemo_final/: CMakeLists.txt
twitterdemo_final/src/: main.cpp  twitterdemo.cpp  twitterdemo.h
twitterdemo_kconfig/: CMakeLists.txt
twitterdemo_kconfig/src/: twitterdemo.cpp  twitterdemo.h  twitterdemoui.rc
twitterdemo_mainwin/: CMakeLists.txt
twitterdemo_mainwin/src/: main.cpp  twitterdemo.cpp  twitterdemo.h  twitterdemoui.rc
